# webhook-mailbox

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: push.yml
polyglot_examples/python/: local.py
src/: endpoints.rs  main.rs  service.rs
