[package]
name = "webhook-mailbox"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
hex = "0.4.3"
lazy_static = "1.4.0"
rocket = "0.5.0-rc.1"
sha2 = "0.10.2"
tokio = { version = "1.17.0", features = ["full"] }

[dev-dependencies]
rand = "0.8.5"
